--- a/ArtifactRelations.Application/pom.xml
+++ b/ArtifactRelations.Application/pom.xml
@@ -35,5 +35,12 @@
 		<artifactId>DeltaGenerator</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
+  			<dependency>
+			<groupId>JKU.ISSE</groupId>
+			<artifactId>c4s.analytics</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/libs/c4s.analytics-0.0.1-SNAPSHOT.jar</systemPath>
+		</dependency>
   </dependencies>
 </project>
