--- a/ArtifactRelations.JiraConnector/pom.xml
+++ b/ArtifactRelations.JiraConnector/pom.xml
@@ -36,11 +36,16 @@
 			<artifactId>fugue</artifactId>
 			<version>4.5.1</version>
 	</dependency>
-	<dependency>
+ 	<dependency>
 		<groupId>ISSE.JKU</groupId>
 		<artifactId>c4s.jiralightconnector</artifactId>
-		<version>0.2.0-SNAPSHOT</version>
-	</dependency>
+		<version>0.3.1-SNAPSHOT</version>
+	</dependency> 
+		<dependency>
+			<groupId>org.lightcouch</groupId>
+			<artifactId>lightcouch</artifactId>
+			<version>0.2.0</version>
+		</dependency>
 	<dependency>
 	  	<groupId>JKU.ISSE</groupId>
  		<artifactId>ArtifactRelations.Core</artifactId>
