--- a/ArtifactRelations.Application/pom.xml
+++ b/ArtifactRelations.Application/pom.xml
@@ -35,12 +35,11 @@
 		<artifactId>DeltaGenerator</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
-  			<dependency>
-			<groupId>JKU.ISSE</groupId>
-			<artifactId>c4s.analytics</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/libs/c4s.analytics-0.0.1-SNAPSHOT.jar</systemPath>
-		</dependency>
+      <dependency>
+          <groupId>JKU.ISSE</groupId>
+          <artifactId>c4s.analytics</artifactId>
+          <version>0.0.1-SNAPSHOT</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 </project>
